readme.md added

--- a/air-quality-api/.env
+++ b/air-quality-api/.env
@@ -20,6 +20,4 @@
 # username/password
 # MONGODB_URI=mongodb+srv://username:password@aircluster.mongodb.net/?retryWrites=true&w=majority&appName=Airquality
 
-# MONGO_URI=addYourDBLinkHere
-
-MONGO_URI=mongodb+srv://rizwan:Sajjad11@airquality.70boeaz.mongodb.net/?retryWrites=true&w=majority&appName=Airquality
+MONGO_URI=addYourDBLinkHere
